--- a/src/styles.css
+++ b/src/styles.css
@@ -44,7 +44,8 @@
 body {
 	display: flex;
 	flex-flow: column nowrap;
-	margin-block: 32px;
+	margin-top: 32px;
+	padding-bottom: 50vh;
 }
 
 .transparent {
